@@ -209,7 +209,7 @@ static bool doSetTile_default(const Pen &pen, int x, int y, bool map)
         }
     } else if (pen.ch) {
         screen[0] = uint8_t(pen.ch);
-        *texpos_lower = 909; // basic black background
+        *texpos_lower = df::global::init->texpos_border_interior; // basic black background
     }
 
     auto rgb_fg = &gps->uccolor[fg][0];
